add training function to HW4 code file

--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -55,7 +55,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def training(train_data_path): #訓練並儲存模型\n",
+    "    \n",
+    "    seed = 666 #亂數種子\n",
+    "    sg = 0 #用CBOW(0)或是Skip-gram(1)\n",
+    "    window_size = 10 #周圍詞彙要看多少範圍\n",
+    "    vector_size = 100 #轉成向量的維度\n",
+    "    min_count = 1 #詞頻少於 min_count 之詞彙不會參與訓練\n",
+    "    workers = 8 #訓練的並行數量\n",
+    "    epochs = 5 #訓練的迭代次數\n",
+    "    batch_words = 10000 #每次給予多少詞彙量訓練\n",
+    "\n",
+    "    train_data = word2vec.LineSentence(train_data_path)\n",
+    "    \n",
+    "    model = word2vec.Word2Vec(\n",
+    "        train_data,\n",
+    "        min_count=min_count,\n",
+    "        vector_size=vector_size,\n",
+    "        workers=workers,\n",
+    "        epochs=epochs,\n",
+    "        window=window_size,\n",
+    "        sg=sg,\n",
+    "        seed=seed,\n",
+    "        batch_words=batch_words\n",
+    "    )\n",
+    "\n",
+    "    model.save('word2vec.model') #儲存模型\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -63,7 +90,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if __name__==\"__main__\":\n",
+    "    file_path=\"./wiki_zh\"\n",
+    "    train_data_path=\"./wiki_zh_seq.txt\"\n",
+    "    \n",
+    "    #transform_and_write_data(file_path)\n",
+    "    \n",
+    "    training(train_data_path) #訓練模型\n",
+    "    \n",
+    "    model = word2vec.Word2Vec.load('word2vec.model')\n",
     "\n",
+    "    for item in model.wv.most_similar('生物', topn=20):\n",
+    "        print(item)\n",
     "    "
    ]
   }
