make code clear

--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -38,10 +47,10 @@
     "                for file_layer_2 in files_layer_2:\n",
     "                    with open( file_path+\"/\"+file_layer_1+\"/\"+file_layer_2 , 'r', encoding='utf-8') as file: #開wiki_zh的每個txt檔\n",
     "                        for times, data in enumerate(file, 1):\n",
-    "                            print('data num:', times)\n",
+    "                            #print('data num:', times)\n",
     "                            data = json.loads(data)\n",
     "                            data = data['text']\n",
-    "                            data =remain_language(data)\n",
+    "                            data = remain_language(data)\n",
     "                            data = sc_to_tc(data) #轉繁體中文\n",
     "                            data = jieba.lcut(data) \n",
     "                            data = [word for word in data if word != ' ']\n",
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,19 +99,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if __name__==\"__main__\":\n",
-    "    file_path=\"./wiki_zh\"\n",
-    "    train_data_path=\"./wiki_zh_seq.txt\"\n",
-    "    \n",
-    "    #transform_and_write_data(file_path)\n",
-    "    \n",
-    "    training(train_data_path) #訓練模型\n",
-    "    \n",
-    "    model = word2vec.Word2Vec.load('word2vec.model')\n",
+    "file_path=\"./wiki_zh\"\n",
+    "train_data_path=\"./wiki_zh_seq.txt\"\n",
     "\n",
-    "    for item in model.wv.most_similar('生物', topn=20):\n",
-    "        print(item)\n",
-    "    "
+    "#transform_and_write_data(file_path)\n",
+    "\n",
+    "training(train_data_path) #訓練模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = word2vec.Word2Vec.load('word2vec.model')\n",
+    "\n",
+    "for item in model.wv.most_similar('生物', topn=20):\n",
+    "    print(item)"
    ]
   }
  ],
