--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,27 +95,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path=\"./wiki_zh\"\n",
     "train_data_path=\"./wiki_zh_seq.txt\"\n",
     "\n",
-    "#transform_and_write_data(file_path)\n",
+    "transform_and_write_data(file_path) #檔案整理,並輸出\n",
     "\n",
-    "training(train_data_path) #訓練模型"
+    "training(train_data_path) #訓練模型\n",
+    "\n",
+    "model = word2vec.Word2Vec.load('word2vec.model')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入一個物件\n",
+      "水果\n",
+      "\n",
+      "水果 的 top 20 相關詞\n",
+      "('蔬菜', 0.887900173664093)\n",
+      "('蜂蜜', 0.8488485813140869)\n",
+      "('柑橘', 0.8451145887374878)\n",
+      "('蔬果', 0.8251779079437256)\n",
+      "('豆類', 0.8211118578910828)\n",
+      "('葡萄乾', 0.8155094385147095)\n",
+      "('芋頭', 0.8050132393836975)\n",
+      "('覆盆子', 0.8043386936187744)\n",
+      "('橄欖油', 0.8028526902198792)\n",
+      "('玉米', 0.8016112446784973)\n",
+      "('薰衣草', 0.7992830276489258)\n",
+      "('大蒜', 0.7992480993270874)\n",
+      "('檸檬', 0.7978089451789856)\n",
+      "('辣椒', 0.7973421812057495)\n",
+      "('黑胡椒', 0.79655921459198)\n",
+      "('香草', 0.7941129803657532)\n",
+      "('藍莓', 0.7931357026100159)\n",
+      "('雞肉', 0.7906715869903564)\n",
+      "('鳳梨', 0.7893867492675781)\n",
+      "('椰子', 0.7886860370635986)\n"
+     ]
+    }
+   ],
    "source": [
-    "model = word2vec.Word2Vec.load('word2vec.model')\n",
+    "print(\"請輸入一個物件\")\n",
+    "ITME = input()\n",
     "\n",
-    "for item in model.wv.most_similar('生物', topn=20):\n",
+    "print()\n",
+    "print(ITME,\"的 top 20 相關詞\")\n",
+    "for item in model.wv.most_similar(ITME, topn=20):\n",
     "    print(item)"
    ]
   }
