make output clear

--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -111,48 +111,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入一個物件\n",
-      "水果\n",
+      "請輸入一個詞\n",
+      "女友\n",
       "\n",
-      "水果 的 top 20 相關詞\n",
-      "('蔬菜', 0.887900173664093)\n",
-      "('蜂蜜', 0.8488485813140869)\n",
-      "('柑橘', 0.8451145887374878)\n",
-      "('蔬果', 0.8251779079437256)\n",
-      "('豆類', 0.8211118578910828)\n",
-      "('葡萄乾', 0.8155094385147095)\n",
-      "('芋頭', 0.8050132393836975)\n",
-      "('覆盆子', 0.8043386936187744)\n",
-      "('橄欖油', 0.8028526902198792)\n",
-      "('玉米', 0.8016112446784973)\n",
-      "('薰衣草', 0.7992830276489258)\n",
-      "('大蒜', 0.7992480993270874)\n",
-      "('檸檬', 0.7978089451789856)\n",
-      "('辣椒', 0.7973421812057495)\n",
-      "('黑胡椒', 0.79655921459198)\n",
-      "('香草', 0.7941129803657532)\n",
-      "('藍莓', 0.7931357026100159)\n",
-      "('雞肉', 0.7906715869903564)\n",
-      "('鳳梨', 0.7893867492675781)\n",
-      "('椰子', 0.7886860370635986)\n"
+      "女友 的 top 20 相關詞\n",
+      "('男友', 0.9716050028800964)\n",
+      "('女朋友', 0.9047173857688904)\n",
+      "('男朋友', 0.9024293422698975)\n",
+      "('前女友', 0.8973594307899475)\n",
+      "('前男友', 0.8904036283493042)\n",
+      "('未婚夫', 0.8621507883071899)\n",
+      "('未婚妻', 0.8408583998680115)\n",
+      "('太太', 0.8189927935600281)\n",
+      "('老公', 0.8066743016242981)\n",
+      "('前妻', 0.7974343299865723)\n",
+      "('老婆', 0.794506847858429)\n",
+      "('分手', 0.7941772937774658)\n",
+      "('前夫', 0.7890509366989136)\n",
+      "('相戀', 0.7803738117218018)\n",
+      "('室友', 0.7784057855606079)\n",
+      "('閨蜜', 0.7688823342323303)\n",
+      "('熱戀', 0.7677774429321289)\n",
+      "('表哥', 0.7641410231590271)\n",
+      "('暗戀', 0.7624026536941528)\n",
+      "('外遇', 0.7583946585655212)\n",
+      "\n",
+      "請輸入一個詞\n",
+      "老公\n",
+      "\n",
+      "老公 的 top 20 相關詞\n",
+      "('老婆', 0.9025986194610596)\n",
+      "('女友', 0.8066743016242981)\n",
+      "('奶奶', 0.8038423657417297)\n",
+      "('太太', 0.7993292808532715)\n",
+      "('小強', 0.795569121837616)\n",
+      "('男友', 0.7941868901252747)\n",
+      "('閨蜜', 0.7906380891799927)\n",
+      "('媽媽', 0.7836593985557556)\n",
+      "('外遇', 0.7714070677757263)\n",
+      "('富家女', 0.7711703181266785)\n",
+      "('女朋友', 0.7703153491020203)\n",
+      "('表姐', 0.7699335813522339)\n",
+      "('男朋友', 0.7661849856376648)\n",
+      "('小妹', 0.7656798958778381)\n",
+      "('大姐', 0.7653130888938904)\n",
+      "('儀飾', 0.7617695927619934)\n",
+      "('偷情', 0.761523425579071)\n",
+      "('前女友', 0.7604488134384155)\n",
+      "('前妻', 0.7598641514778137)\n",
+      "('丫頭', 0.7563636898994446)\n",
+      "\n",
+      "請輸入一個詞\n",
+      "quit\n"
      ]
     }
    ],
    "source": [
-    "print(\"請輸入一個物件\")\n",
-    "ITME = input()\n",
-    "\n",
-    "print()\n",
-    "print(ITME,\"的 top 20 相關詞\")\n",
-    "for item in model.wv.most_similar(ITME, topn=20):\n",
-    "    print(item)"
+    "while True:\n",
+    "    print(\"請輸入一個詞\")\n",
+    "    ITME = input()\n",
+    "    \n",
+    "    if ITME==\"quit\":\n",
+    "        break\n",
+    "    else:\n",
+    "        print()\n",
+    "        print(ITME,\"的 top 20 相關詞\")\n",
+    "        try:\n",
+    "            for item in model.wv.most_similar(ITME, topn=20):\n",
+    "                print(item)\n",
+    "            print()\n",
+    "        except:\n",
+    "            print(\"不存在此詞語, 請重新輸入\")\n",
+    "            print()"
    ]
   }
  ],
